WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22694
[GTK] Back / Forward history menus are flipped
https://bugs.webkit.org/show_bug.cgi?id=22694
Summary
[GTK] Back / Forward history menus are flipped
Luca Ferretti
Reported
2008-12-05 13:58:51 PST
Using epiphany-webkit, in Back toolbutton menu lists the previous visited pages are in reverse order, i.e. the previous one is the last enty of the list Example: * go to google.com * go to yahoo.com * go to gnome.org * go to kde.org Expected result: The menu obtained clicking on Back toolbutton arrow should be 1) gnome.org 2) yahoo.com 3) google.com Current results The menu is instead: 1) google.com 2) yahoo.com 3) gnome.org Origianally reported here
http://bugzilla.gnome.org/show_bug.cgi?id=562553
Attachments
don't call g_list_reverse when returning the back or forward list
(6.74 KB, patch)
2009-02-20 20:13 PST
,
Jan Alonzo
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jan Alonzo
Comment 1
2008-12-05 14:02:13 PST
Thanks Luca. I'll work on this.
Jan Alonzo
Comment 2
2009-02-20 20:13:08 PST
Created
attachment 27848
[details]
don't call g_list_reverse when returning the back or forward list
Jan Alonzo
Comment 3
2009-02-23 02:01:04 PST
Thanks Mark. Landed in
r41137
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug