WebKit/gtk/tests/main.c
@@ -63,6 +63,98 @@ static void test_webkit_web_frame_lifetime(void)
 }
 
 static void
+test_webkit_web_back_forward_list_order(void)
+{
+    WebKitWebView* webView;
+    WebKitWebBackForwardList* webBackForwardList;
+    WebKitWebHistoryItem* item1;
+    WebKitWebHistoryItem* item2;
+    WebKitWebHistoryItem* item3;
+    WebKitWebHistoryItem* item4;
+    WebKitWebHistoryItem* currentItem;
+    GList* backList = NULL;
+    GList* forwardList = NULL;
+    g_test_bug("22694");
+
+    webView = WEBKIT_WEB_VIEW(webkit_web_view_new());
+    g_object_ref_sink(webView);
+
+    webkit_web_view_set_maintains_back_forward_list(webView, TRUE);
+    webBackForwardList = webkit_web_view_get_back_forward_list(webView);
+    g_assert(webBackForwardList);
+
+    // Check that there is no item.
+    g_assert(!webkit_web_back_forward_list_get_current_item(webBackForwardList));
+    g_assert_cmpint(webkit_web_back_forward_list_get_forward_length(webBackForwardList), ==, 0);
+    g_assert_cmpint(webkit_web_back_forward_list_get_back_length(webBackForwardList), ==, 0);
+    g_assert(!webkit_web_view_can_go_forward(webView));
+    g_assert(!webkit_web_view_can_go_back(webView));
+
+    // Add a new items
+    item1 = webkit_web_history_item_new_with_data("http://example.com/1/", "Site 1");
+    webkit_web_back_forward_list_add_item(webBackForwardList, item1);
+    g_assert(webkit_web_back_forward_list_contains_item(webBackForwardList, item1));
+
+    item2 = webkit_web_history_item_new_with_data("http://example.com/2/", "Site 2");
+    webkit_web_back_forward_list_add_item(webBackForwardList, item2);
+    g_assert(webkit_web_back_forward_list_contains_item(webBackForwardList, item2));
+
+    item3 = webkit_web_history_item_new_with_data("http://example.com/3/", "Site 3");
+    webkit_web_back_forward_list_add_item(webBackForwardList, item3);
+    g_assert(webkit_web_back_forward_list_contains_item(webBackForwardList, item3));
+
+    item4 = webkit_web_history_item_new_with_data("http://example.com/4/", "Site 4");
+    webkit_web_back_forward_list_add_item(webBackForwardList, item4);
+    g_assert(webkit_web_back_forward_list_contains_item(webBackForwardList, item4));
+
+    // check the back list order
+    backList = webkit_web_back_forward_list_get_back_list_with_limit(webBackForwardList, 5);
+    g_assert(backList);
+
+    currentItem = WEBKIT_WEB_HISTORY_ITEM(backList->data);
+    g_assert_cmpstr(webkit_web_history_item_get_uri(currentItem), ==, "http://example.com/3/");
+    g_assert_cmpstr(webkit_web_history_item_get_title(currentItem), ==, "Site 3");
+    backList = backList->next;
+
+    currentItem = WEBKIT_WEB_HISTORY_ITEM(backList->data);
+    g_assert_cmpstr(webkit_web_history_item_get_uri(currentItem), ==, "http://example.com/2/");
+    g_assert_cmpstr(webkit_web_history_item_get_title(currentItem), ==, "Site 2");
+    backList = backList->next;
+
+    currentItem = WEBKIT_WEB_HISTORY_ITEM(backList->data);
+    g_assert_cmpstr(webkit_web_history_item_get_uri(currentItem), ==, "http://example.com/1/");
+    g_assert_cmpstr(webkit_web_history_item_get_title(currentItem), ==, "Site 1");
+    g_list_free(backList);
+
+    // check the forward list order
+    g_assert(webkit_web_view_go_to_back_forward_item(webView, item1));
+    forwardList = webkit_web_back_forward_list_get_forward_list_with_limit(webBackForwardList,5);
+    g_assert(forwardList);
+
+    currentItem = WEBKIT_WEB_HISTORY_ITEM(forwardList->data);
+    g_assert_cmpstr(webkit_web_history_item_get_uri(currentItem), ==, "http://example.com/4/");
+    g_assert_cmpstr(webkit_web_history_item_get_title(currentItem), ==, "Site 4");
+    forwardList = forwardList->next;
+
+    currentItem = WEBKIT_WEB_HISTORY_ITEM(forwardList->data);
+    g_assert_cmpstr(webkit_web_history_item_get_uri(currentItem), ==, "http://example.com/3/");
+    g_assert_cmpstr(webkit_web_history_item_get_title(currentItem), ==, "Site 3");
+    forwardList = forwardList->next;
+
+    currentItem = WEBKIT_WEB_HISTORY_ITEM(forwardList->data);
+    g_assert_cmpstr(webkit_web_history_item_get_uri(currentItem), ==, "http://example.com/2/");
+    g_assert_cmpstr(webkit_web_history_item_get_title(currentItem), ==, "Site 2");
+
+    g_object_unref(currentItem);
+    g_object_unref(item1);
+    g_object_unref(item2);
+    g_object_unref(item3);
+    g_object_unref(item4);
+    g_list_free(forwardList);
+    g_object_unref(webView);
+}
+
+static void
 test_webkit_web_back_forward_list_add_item(void)
 {
     WebKitWebView* webView;
@@ -143,7 +235,7 @@ int main(int argc, char** argv)
     g_test_add_func("/webkit/webview/create_destroy", test_webkit_web_frame_create_destroy);
     g_test_add_func("/webkit/webframe/lifetime", test_webkit_web_frame_lifetime);
     g_test_add_func("/webkit/webbackforwardlist/add_item", test_webkit_web_back_forward_list_add_item);
-
+    g_test_add_func("/webkit/webbackforwardlist/list_order", test_webkit_web_back_forward_list_order);
     return g_test_run ();
 }
 
